# legal-radar

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  radar.db  rejected.jsonl
.github/workflows/: ci.yml  radar.yml  watchlist.yml
data/: cases.yaml  config.example.yaml
docs/: index.html
migrations/: 001_init.sql  002_score_hash_pflichten.sql
scripts/: seed_preview.py
src/legal_radar/: __main__.py  cli.py
src/legal_radar/core/: config.py  db.py  github.py  hashing.py  http.py  models.py  smtp.py
src/legal_radar/digest/: events.py  html.py  mail.py  render.py  summary.py
src/legal_radar/extract/: llm.py  rules.py  verify.py
src/legal_radar/score/: deterministic.py  neighbors.py
src/legal_radar/sources/: base.py  bgbl_rss.py  cellar.py  dip.py
tests/: test_bgbl_rss.py  test_cli_fetch.py  test_db.py  test_digest.py  test_hashing.py  test_rules.py  test_scoring.py  test_verify.py
worker/: wrangler.toml
worker/src/: index.js
