[project]
name = "legal-radar"
version = "0.1.0"
description = "Frühwarnsystem für wirtschaftlich relevante Gesetzgebung"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "feedparser>=6.0",
  "anthropic>=0.40",
  "typer>=0.12",
]

[dependency-groups]
dev = ["ruff>=0.6", "pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
radar = "legal_radar.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legal_radar"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "ARG", "PTH", "TRY"]
ignore = ["TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
